setting up home page

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,5 +59,23 @@
             href="https://cdn.mypanel.link/sl1v5i/6wqmi0hzo7f6yu11.css"
         />
     </head>
-    <body></body>
+    <body>
+        {% block content %} {% endblock content %}
+        <script
+            type="text/javascript"
+            src="https://cdn.mypanel.link/global/66jsbg7w4u6g7toz.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="https://cdn.mypanel.link/global/8n665fzhazcg73tz.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="https://cdn.mypanel.link/global/69mo28rzol10z80z.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="https://cdn.mypanel.link/global/33srijdbqcgk6lsz.js"
+        ></script>
+    </body>
 </html>
