place order file updated

--- a/dashboard/templates/components/try_panel.html
+++ b/dashboard/templates/components/try_panel.html
@@ -115,3 +115,333 @@
         </div>
     </div>
 </div>
+<div id="block_8">
+    <div class="header-with-text">
+        <div class="bg"></div>
+        <div class="divider-top"></div>
+        <div class="divider-bottom"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="text-block__title style-header-text">
+                        <h2 class="text-center">
+                            <span style="text-align: CENTER"
+                                >Why try our panel?</span
+                            >
+                        </h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="text-block__description style-header-text">
+                        <p class="text-center">
+                            We aim to help our customers become popular online
+                            in an affordable way.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="block_29">
+    <div class="block-features">
+        <div class="bg"></div>
+        <div class="divider-top"></div>
+        <div class="divider-bottom"></div>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 block-features__cards">
+                    <div class="row">
+                        <div class="col-md-6 style-features-card">
+                            <div class="card features-card" >
+                                <div class="block-features__card">
+                                    <div
+                                        class="block-features__card-icon"
+                                        style="
+                                            margin-bottom: 10px;
+                                            height: 80px;
+                                            width: 80px;
+                                        "
+                                    >
+                                        <span
+                                            class="
+                                                feature-block__icon
+                                                style-text-primary
+                                                fas
+                                                fa-crown
+                                            "
+                                            style="
+                                                font-size: 24px;
+                                                width: 24px;
+                                                height: 24px;
+                                                transform: rotate(0deg);
+                                                color: #14ddd7;
+                                                text-shadow: 0 8px 16px
+                                                    rgba(20, 221, 215, 0.32);
+                                                border-radius: 0px;
+                                                background: transparent;
+                                                padding: 0px;
+                                            "
+                                        ></span>
+                                    </div>
+                                    <div class="block-features__card-content">
+                                        <div
+                                            class="
+                                                card-content__head
+                                                style-text-features-title
+                                            "
+                                            style="
+                                                margin-bottom: 10px;
+                                                padding-left: 0px;
+                                                padding-right: 0px;
+                                            "
+                                        >
+                                            <p>
+                                                <strong
+                                                    style="font-weight: bold"
+                                                    >Top-quality
+                                                    services</strong
+                                                >
+                                            </p>
+                                        </div>
+                                        <div
+                                            class="
+                                                card-content__desc
+                                                style-text-features-desc
+                                            "
+                                            style="
+                                                padding-left: 0px;
+                                                padding-right: 0px;
+                                            "
+                                        >
+                                            <p>
+                                                The best quality SMM services
+                                                you can find online.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 style-features-card">
+                            <div class="card features-card" >
+                                <div class="block-features__card">
+                                    <div
+                                        class="block-features__card-icon"
+                                        style="
+                                            margin-bottom: 10px;
+                                            height: 80px;
+                                            width: 80px;
+                                        "
+                                    >
+                                        <span
+                                            class="
+                                                feature-block__icon
+                                                style-text-primary
+                                                fas
+                                                fa-box-usd
+                                            "
+                                            style="
+                                                font-size: 24px;
+                                                width: 24px;
+                                                height: 24px;
+                                                transform: rotate(0deg);
+                                                color: #1a87ff;
+                                                text-shadow: 0 8px 16px
+                                                    rgba(26, 135, 255, 0.32);
+                                                border-radius: 0px;
+                                                background: transparent;
+                                                padding: 0px;
+                                            "
+                                        ></span>
+                                    </div>
+                                    <div class="block-features__card-content">
+                                        <div
+                                            class="
+                                                card-content__head
+                                                style-text-features-title
+                                            "
+                                            style="
+                                                margin-bottom: 10px;
+                                                padding-left: 0px;
+                                                padding-right: 0px;
+                                            "
+                                        >
+                                            <p>
+                                                <strong
+                                                    style="font-weight: bold"
+                                                    >Diverse payment
+                                                    systems</strong
+                                                >
+                                            </p>
+                                        </div>
+                                        <div
+                                            class="
+                                                card-content__desc
+                                                style-text-features-desc
+                                            "
+                                            style="
+                                                padding-left: 0px;
+                                                padding-right: 0px;
+                                            "
+                                        >
+                                            <p>
+                                                A great variety of payment
+                                                options to add funds to your
+                                                account.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 style-features-card">
+                            <div class="card features-card" >
+                                <div class="block-features__card">
+                                    <div
+                                        class="block-features__card-icon"
+                                        style="
+                                            margin-bottom: 10px;
+                                            height: 80px;
+                                            width: 80px;
+                                        "
+                                    >
+                                        <span
+                                            class="
+                                                feature-block__icon
+                                                style-text-primary
+                                                fas
+                                                fa-hand-holding-usd
+                                            "
+                                            style="
+                                                font-size: 24px;
+                                                width: 24px;
+                                                height: 24px;
+                                                transform: rotate(0deg);
+                                                color: #ffc157;
+                                                text-shadow: 0 8px 16px
+                                                    rgba(255, 193, 87, 0.32);
+                                                border-radius: 0px;
+                                                background: transparent;
+                                                padding: 0px;
+                                            "
+                                        ></span>
+                                    </div>
+                                    <div class="block-features__card-content">
+                                        <div
+                                            class="
+                                                card-content__head
+                                                style-text-features-title
+                                            "
+                                            style="
+                                                margin-bottom: 10px;
+                                                padding-left: 0px;
+                                                padding-right: 0px;
+                                            "
+                                        >
+                                            <p>
+                                                <strong
+                                                    style="font-weight: bold"
+                                                    >Cheap services</strong
+                                                >
+                                            </p>
+                                        </div>
+                                        <div
+                                            class="
+                                                card-content__desc
+                                                style-text-features-desc
+                                            "
+                                            style="
+                                                padding-left: 0px;
+                                                padding-right: 0px;
+                                            "
+                                        >
+                                            <p>
+                                                Prices on our panel are really
+                                                low, all services are
+                                                affordable.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 style-features-card">
+                            <div class="card features-card" >
+                                <div class="block-features__card">
+                                    <div
+                                        class="block-features__card-icon"
+                                        style="
+                                            margin-bottom: 10px;
+                                            height: 80px;
+                                            width: 80px;
+                                        "
+                                    >
+                                        <span
+                                            class="
+                                                feature-block__icon
+                                                style-text-primary
+                                                fas
+                                                fa-box-heart
+                                            "
+                                            style="
+                                                font-size: 24px;
+                                                width: 24px;
+                                                height: 24px;
+                                                transform: rotate(0deg);
+                                                color: #ff4587;
+                                                text-shadow: 0 8px 16px
+                                                    rgba(255, 69, 135, 0.32);
+                                                border-radius: 0px;
+                                                background: transparent;
+                                                padding: 0px;
+                                            "
+                                        ></span>
+                                    </div>
+                                    <div class="block-features__card-content">
+                                        <div
+                                            class="
+                                                card-content__head
+                                                style-text-features-title
+                                            "
+                                            style="
+                                                margin-bottom: 10px;
+                                                padding-left: 0px;
+                                                padding-right: 0px;
+                                            "
+                                        >
+                                            <p>
+                                                <strong
+                                                    style="font-weight: bold"
+                                                    >Prompt delivery</strong
+                                                >
+                                            </p>
+                                        </div>
+                                        <div
+                                            class="
+                                                card-content__desc
+                                                style-text-features-desc
+                                            "
+                                            style="
+                                                padding-left: 0px;
+                                                padding-right: 0px;
+                                            "
+                                        >
+                                            <p>
+                                                You will be surprised at how
+                                                quick our order delivery is.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
