home page complete

--- a/dashboard/templates/components/faqs.html
+++ b/dashboard/templates/components/faqs.html
@@ -519,3 +519,30 @@
         </div>
     </div>
 </div>
+
+<style>
+    .style-header-text {
+        color: #ffffff;
+    }
+    .style-collapsed-background {
+        background: #e4e1ee;
+    }
+    .card {
+        padding-top: 24px;
+        padding-left: 24px;
+        padding-right: 24px;
+        padding-bottom: 24px;
+        border-color: #000000;
+        background: #ffffff;
+        border-top-left-radius: 16px;
+        border-top-right-radius: 16px;
+        border-bottom-left-radius: 16px;
+        border-bottom-right-radius: 16px;
+        border-left-width: 0px;
+        border-right-width: 0px;
+        border-top-width: 0px;
+        border-bottom-width: 0px;
+        border-style: none;
+        box-shadow: 0 16px 24px 0 rgb(0 0 0 / 8%);
+    }
+</style>
