--- a/dashboard/templates/components/footer.html
+++ b/dashboard/templates/components/footer.html
@@ -28,3 +28,14 @@
         </div>
     </div>
 </div>
+
+<style>
+    .component-footer__public {
+        color: #ffffff;
+        min-height: 64px;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        box-shadow: none;
+        background: #170c43;
+    }
+</style>
