--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -383,8 +383,8 @@
             {% include 'components/place_order.html' %}
             <div></div>
             {% include 'components/success_story.html' %}
-
-            
+            <div></div>
+            {% include 'components/faqs.html' %}
         </div>
         {% include 'components/footer.html' %}
     </div>
