login form thik

--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -199,7 +199,7 @@
                                                         <input
                                                             class="form-control"
                                                             type="text"
-                                                            name="LoginForm[username]"
+                                                            name="username"
                                                         />
                                                     </div>
                                                 </div>
@@ -209,7 +209,7 @@
                                                         <input
                                                             class="form-control"
                                                             type="password"
-                                                            name="LoginForm[password]"
+                                                            name="password"
                                                         />
                                                     </div>
                                                 </div>
@@ -314,12 +314,9 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <input
-                                                type="hidden"
-                                                name="_csrf"
-                                                value="vRcP_NAJDuzr422EIlYzPAJSy9kk2B2ehV_KfsshqTH6e3yekVtCraTWWc4VFF5XQxeZnEaHWtHzMfw8hlnNQg=="
-                                            />
-                                            <div
+
+                                            <!-- Captcha -->
+                                            <!-- <div
                                                 class="g-recaptcha form-group"
                                                 data-sitekey="6LeI5rUaAAAAAOt-b5yNJJhBqyqTM6EFjX-iSzUK"
                                             >
@@ -367,7 +364,7 @@
                                                 <iframe
                                                     style="display: none"
                                                 ></iframe>
-                                            </div>
+                                            </div> -->
                                         </form>
                                     </div>
                                 </div>
