--- a/dashboard/templates/home.html
+++ b/dashboard/templates/home.html
@@ -13,172 +13,7 @@
                     <div class="divider-bottom"></div>
                     <!-- Sign in form -->
                     <div class="container">
-                        <div class="row">
-                            <div class="col">
-                                <div class="block-signin__content">
-                                    <div
-                                        class="
-                                            block-signin__title
-                                            style-text-signin
-                                        "
-                                    >
-                                        <p class="text-center text-white">
-                                            <span style="font-size: 45px"
-                                                ><span
-                                                    style="
-                                                        color: rgba(
-                                                            253,
-                                                            0,
-                                                            0,
-                                                            1
-                                                        );
-                                                    "
-                                                    ><span
-                                                        style="
-                                                            text-align: CENTER;
-                                                        "
-                                                        ><strong
-                                                            style="
-                                                                font-weight: bold;
-                                                            "
-                                                            >#1</strong
-                                                        ></span
-                                                    ></span
-                                                ></span
-                                            ><span style="font-size: 45px"
-                                                ><span
-                                                    style="text-align: CENTER"
-                                                    ><strong
-                                                        style="
-                                                            font-weight: bold;
-                                                        "
-                                                    >
-                                                        Cheapest
-                                                    </strong></span
-                                                ></span
-                                            ><span
-                                                style="
-                                                    color: rgba(246, 223, 0, 1);
-                                                "
-                                                ><span style="font-size: 45px"
-                                                    ><span
-                                                        style="
-                                                            text-align: CENTER;
-                                                        "
-                                                        ><strong
-                                                            style="
-                                                                font-weight: bold;
-                                                            "
-                                                            >SMM
-                                                        </strong></span
-                                                    ></span
-                                                ></span
-                                            ><span style="font-size: 45px"
-                                                ><span
-                                                    style="text-align: CENTER"
-                                                    ><strong
-                                                        style="
-                                                            font-weight: bold;
-                                                        "
-                                                        >Provider Panel.
-                                                        Specially For
-                                                    </strong></span
-                                                ></span
-                                            ><span
-                                                style="
-                                                    color: rgba(255, 240, 0, 1);
-                                                "
-                                                ><span style="font-size: 45px"
-                                                    ><span
-                                                        style="
-                                                            text-align: CENTER;
-                                                        "
-                                                        ><strong
-                                                            style="
-                                                                font-weight: bold;
-                                                            "
-                                                            >API</strong
-                                                        ></span
-                                                    ></span
-                                                ></span
-                                            >
-                                        </p>
-                                    </div>
-                                    <div
-                                        class="
-                                            block-signin__description
-                                            style-text-signin
-                                        "
-                                    >
-                                        <p class="text-center text-white">
-                                            <span style="text-align: CENTER"
-                                                ><strong
-                                                    style="font-weight: bold"
-                                                    >WE HAVE
-                                                </strong></span
-                                            ><span
-                                                style="
-                                                    color: rgba(0, 255, 12, 1);
-                                                "
-                                                ><span
-                                                    style="text-align: CENTER"
-                                                    ><strong
-                                                        style="
-                                                            font-weight: bold;
-                                                        "
-                                                        >EVERYTHING</strong
-                                                    ></span
-                                                ></span
-                                            ><span style="text-align: CENTER"
-                                                ><strong
-                                                    style="font-weight: bold"
-                                                >
-                                                    YOU NEEND TO RUN
-                                                </strong></span
-                                            ><span
-                                                style="
-                                                    color: rgba(
-                                                        255,
-                                                        255,
-                                                        255,
-                                                        1
-                                                    );
-                                                "
-                                                ><span
-                                                    style="text-align: CENTER"
-                                                    ><strong
-                                                        style="
-                                                            font-weight: bold;
-                                                        "
-                                                        >SUCCESSFUL
-                                                    </strong></span
-                                                ></span
-                                            ><span
-                                                style="
-                                                    color: rgba(255, 251, 0, 1);
-                                                "
-                                                ><span
-                                                    style="text-align: CENTER"
-                                                    ><strong
-                                                        style="
-                                                            font-weight: bold;
-                                                        "
-                                                        >SOCIAL
-                                                    </strong></span
-                                                ></span
-                                            ><span style="text-align: CENTER"
-                                                ><strong
-                                                    style="font-weight: bold"
-                                                    >MEDIA ACCOUNTS</strong
-                                                ></span
-                                            >
-                                        </p>
-                                        <p><br /></p>
-                                        <p class="text-center"><br /></p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        {% include 'components/hero.html' %}
 
                         <div class="row block-signin__aligment">
                             <div class="col-lg-8">
