--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -51,12 +52,12 @@
         <link
             rel="stylesheet"
             type="text/css"
-            href="https://cdn.mypanel.link/global/appfuxqpzhesdli8.css"
+            href="{% static 'css/bootstrap.css' %}"
         />
         <link
             rel="stylesheet"
             type="text/css"
-            href="https://cdn.mypanel.link/sl1v5i/6wqmi0hzo7f6yu11.css"
+            href="{% static 'css/bootstrap.date.css' %}"
         />
     </head>
     <body>
