--- a/templates/base.html
+++ b/templates/base.html
@@ -57,14 +57,14 @@
         <link
             rel="stylesheet"
             type="text/css"
-            href="{% static 'css/bootstrap.date.css' %}"
+            href="{% static 'css/bootstrap.data.css' %}"
         />
     </head>
     <body>
         {% block content %} {% endblock content %}
         <script
             type="text/javascript"
-            src="https://cdn.mypanel.link/global/66jsbg7w4u6g7toz.js"
+            src="{% static 'js/file1.js' %}"
         ></script>
         <script
             type="text/javascript"
