added js and css files

--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,11 @@
         ></script>
         <script
             type="text/javascript"
-            src="https://cdn.mypanel.link/global/8n665fzhazcg73tz.js"
+          src="{% static 'js/file3.js' %}"
+        ></script>
+        <script
+            type="text/javascript"
+          src="{% static 'js/file4.js' %}"
         ></script>
         <script
             type="text/javascript"
