updated header links

--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -62,7 +62,7 @@
                                                     component-navbar-nav-link__navbar-public
                                                     component-navbar-nav-link-active__navbar-public
                                                 "
-                                                href="/"
+                                                href="{% url 'login' %}"
                                                 ><i
                                                     class="
                                                         navbar-icon
@@ -134,7 +134,7 @@
                                                     component-navbar-nav-link
                                                     component-navbar-nav-link__navbar-public
                                                 "
-                                                href="/signup"
+                                                href="{% url 'register' %}"
                                                 ><i
                                                     class="
                                                         navbar-icon
