--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>SASTAPROVIDER - LogIn</title>
+        <title>{% block title %} {% endblock title %}</title>
         <meta
             name="keywords"
             content="smm panel,best smm panel,cheapest smm panel,main smm panel,main smm provider,sasta,provider,smm,sast provider,api,social media"
