--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -13,7 +13,7 @@
                         <nav class="navbar navbar-expand-lg navbar-light">
                             <div class="sidebar-block__top-brand">
                                 <div class="component-navbar-logo">
-                                    <a href="/en">
+                                    <a href="{% url 'home' %}">
                                         <img
                                             src="https://cdn.mypanel.link/sl1v5i/omwktrjr2pkj9gi5.png"
                                             class="sidebar-block__top-logo"
